fix sonarcloud